# DeskMate-Advance

./: .gitattributes  .gitignore  ADVANCE_MODEL_MACRO_PLAN.md  AGENTS.md  DeskMate_Advance_Proposal (1).pptx  README.md  pyproject.toml  requirements-training-cu130.txt
archive/deskmate/: README.md
chip_recognition_workspace/: audit_external_chip_datasets.py  build_chip_hard_negative_dataset.py  build_chip_localization_dataset.py  build_chip_templates.py  chip_annotation_review_v1.json  chip_best_frame.py  chip_live_value.py  chip_ocr.py  chip_rim_color_value.py  chip_template_matcher.py  chip_value_tracker.py  chip_yolo11n_chip_v2_v1.json  chip_yolo11n_denominations_fit_v1.json  chip_yolo11n_finetune_v1.json  chip_yolo11n_hard_negative_v3.json  chip_yolo11n_localization_public_target_v2.json  evaluate_chip_fit_on_sources.py  evaluate_chip_negative_images.py  evaluate_chip_templates.py  finalize_augment_chip_dataset.py  live_chip_stream.py  live_chip_yolo11.py  live_chip_yolo11_rim_color.py  live_stream_viewer.py  package_chip_template_library.py  prelabel_chip_dataset.py  rectify_chip_images.py  requirements.txt  test_build_chip_hard_negative_dataset.py  test_chip_best_frame.py  test_chip_live_value.py  test_chip_rim_color_value.py  test_chip_template_matcher.py  test_chip_value_tracker.py  test_package_chip_template_library.py  test_rectify_chip_images.py  train_chip_yolo11n.py
configs/contracts/: action_observation.schema.json  card_observation.schema.json  core_rules.schema.json  dealer_message.schema.json  face_identity_observation.schema.json  hand_snapshot.schema.json  network_endpoints.schema.json  player_action.schema.json  runtime_profile.schema.json  stage0_decisions.json  stage0_decisions.schema.json  table_layout.schema.json  walkthroughs.schema.json
configs/ergonomics/: events.json  (+1 more)
models/: manifest.yaml
(+437 files in other folders)
