[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "deskmate-advance"
version = "0.1.0"
description = "DeskMate Advance perception and event runtime"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python>=4.10,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
