[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "deskmate-advance"
version = "0.1.0"
description = "DeskMate Advance perception and event runtime"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.26,<3",
  "mediapipe==0.10.35",
  "opencv-contrib-python==5.0.0.93",
  "sounddevice==0.5.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<10"]
benchmark = ["psutil==7.2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
