[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-dealer"
version = "0.1.0"
description = "Four-player Texas Hold'em robotic dealer runtime"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.26,<3",
  "opencv-contrib-python==5.0.0.93",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<10", "jsonschema>=4.23,<5"]
benchmark = ["psutil>=7,<8"]
action-pilot = ["mediapipe==0.10.35"]
speech-pilot = ["vosk==0.3.45", "sounddevice==0.5.5"]
training = ["torch>=2.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
